apply plugin: 'com.android.application'
apply plugin: 'com.google.firebase.crashlytics'
apply plugin: 'com.google.gms.google-services'

android {
    namespace = "com.realappraiser.gharvalue"
    compileSdk = 34

    defaultConfig {
        applicationId "com.realappraiser.gharvalue"
        minSdk 21
        targetSdk 34
        versionCode 31
        versionName "3.2.1"
        resourceConfigurations += ['en']
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
        //signingConfig signingConfigs.release
//        signingConfig signingConfigs.release
        // Enabling multidex support.
        multiDexEnabled true
    }
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }




    signingConfigs {

        release {
            storeFile file('realappraiser.jks')
            storePassword "realappraiser"
            keyAlias "realappraiser"
            keyPassword "realappraiser"

            // Optional, specify signing versions used
            v1SigningEnabled true
            v2SigningEnabled true
        }
    }


    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            debuggable false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            buildConfigField 'String', 'DATE', '"28-Jan-2025"'
            signingConfig signingConfigs.release

        }

        debug{
            debuggable true
//            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            // proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            buildConfigField 'String', 'DATE', '"28-Jan-2025"'
        }
    }
    buildFeatures {
        buildConfig true
        viewBinding true
    }
    packagingOptions {
        jniLibs {
            excludes += ['lib/mips/libmodpdfium.so', 'lib/mips/libmodft2.so', 'lib/mips/libmodpng.so', 'lib/mips/libjniPdfium.so', 'lib/armeabi/libmodpdfium.so', 'lib/armeabi/libmodft2.so', 'lib/armeabi/libmodpng.so', 'lib/armeabi/libjniPdfium.so', 'lib/x86_64/libmodpdfium.so', 'lib/x86_64/libmodft2.so', 'lib/x86_64/libmodpng.so', 'lib/x86_64/libjniPdfium.so', 'lib/x86/libmodpdfium.so', 'lib/x86/libmodft2.so', 'lib/x86/libmodpng.so', 'lib/x86/libjniPdfium.so', 'lib/arm64-v8a/libmodpdfium.so', 'lib/x86/libsqlcipher.so']
        }
        resources {
            excludes += ['LICENSE', 'LICENSE.txt', 'META-INF/ASL2.0', 'META-INF/DEPENDENCIES', 'META-INF/DEPENDENCIES.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/notice.txt', 'META-INF/license.txt', 'META-INF/dependencies.txt', 'META-INF/LGPL2.1', 'META-INF/ASL2.0', 'META-INF/io.netty.versions.properties', 'META-INF/INDEX.LIST', 'main/AndroidManifest.xml', 'main/res/values/strings.xml']
        }
    }
    /* splits {
        abi {
            enable true
            reset()
            include 'x86', 'armeabi', 'armeabi-v7a', 'mips'
            universalApk true
        }
    }*/
    productFlavors {
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    lint {
        abortOnError false
        checkAllWarnings true
        htmlOutput file('lint-report.html')
        htmlReport true
        ignoreWarnings true
        quiet true
        showAll true
        xmlOutput file('lint-report.xml')
        xmlReport true
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.google.android.material:material:1.1.0'
    /*implementation 'com.android.support.constraint:constraint-layout:1.0.2'*/
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    testImplementation 'junit:junit:4.13'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation "androidx.test:core:1.4.0"
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    implementation files('libs/jsr223.jar')


    implementation 'com.github.itning:shadow:0.0.3'
    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.squareup.okhttp3:okhttp:4.4.1'
    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.1'
    implementation 'com.jakewharton:butterknife:10.2.1'
    annotationProcessor'com.jakewharton:butterknife-compiler:10.2.1'
    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
//    implementation 'com.github.barteksc:android-pdf-viewer:3.0.0-beta.4'
    implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
    /****form design compile****/
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
    //noinspection GradleDependency
    implementation 'com.google.android.gms:play-services-places:17.0.0'
    //noinspection GradleDependency
    implementation 'com.google.android.gms:play-services-location:18.0.0'
    implementation 'com.google.android.gms:play-services-maps:18.0.0'
    //implementation 'com.google.maps.android:android-maps-utils:0.5+'
    implementation 'com.iceteck.silicompressorr:silicompressor:2.2.4'
    implementation 'com.victor:lib:1.0.4'
    implementation 'androidx.multidex:multidex:2.0.1'
    //glide
    implementation 'com.github.bumptech.glide:glide:4.11.0'
    /*implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
        transitive = true
    }*/
  //  implementation 'com.github.amitshekhariitbhu.Android-Debug-Database:debug-db:v1.0.6'
    // loading
   implementation 'com.wang.avi:library:2.1.3'

    //Room persistance library added @feb20 for Allproperty ntw listener offline datastore in other detail screen
    implementation 'androidx.room:room-runtime:2.6.1'
    annotationProcessor 'androidx.room:room-compiler:2.6.1'
    implementation 'androidx.lifecycle:lifecycle-runtime:2.8.3'
    // not necessary if you are using Support Library 26.1+ or lifecycle:extensions
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    // Progress bar
    implementation 'me.itangqi.waveloadingview:library:0.3.5'
    implementation 'com.faendir.rhino:rhino-android:1.4'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'


    //firebase Analytics
    implementation 'com.google.firebase:firebase-core:21.1.1'
    //firebase crashlytics
    implementation 'com.google.firebase:firebase-crashlytics:19.0.3'
    //firebase remote config
    implementation 'com.google.firebase:firebase-config:22.0.0'


    //work manager
    implementation "androidx.work:work-runtime:2.9.0"

    //zetbaitsu Compressor
    implementation 'id.zelory:compressor:3.0.1'

    //newly added
//    implementation 'com.github.bumptech.glide:glide:4.14.2'
//    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'

    //sdp
    implementation 'com.intuit.sdp:sdp-android:1.0.6'

    //google places
    implementation 'com.google.android.libraries.places:places:3.5.0'


    implementation 'com.google.android.gms:play-services-gcm:17.0.0'
    implementation 'com.google.android.gms:play-services-safetynet:18.1.0'


    //Gson
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation "com.squareup.retrofit2:converter-gson:2.9.0"

    //Shimmer effect
    implementation 'com.facebook.shimmer:shimmer:0.5.0'

    //for generate pdf
    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.1'

    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
}
// ADD THIS AT THE BOTTOM


